Added code to swap lat/lon

--- a/samir_test.ipynb
+++ b/samir_test.ipynb
@@ -427,6 +427,110 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For google maps, we should change lat <-> lon\n",
+    "def swap_xy(geom):\n",
+    " \n",
+    "    def swap_xy_coords(coords):\n",
+    "        for x, y in coords:\n",
+    "            yield (y, x)\n",
+    "\n",
+    "    ring = geom.exterior\n",
+    "    shell = type(ring)(list(swap_xy_coords(ring.coords)))\n",
+    "    holes = list(geom.interiors)\n",
+    "    for pos, ring in enumerate(holes):\n",
+    "        holes[pos] = type(ring)(list(swap_xy_coords(ring.coords)))\n",
+    "    return type(geom)(shell, holes)\n",
+    "\n",
+    "google_maps_locations = polygons.geometry.apply(swap_xy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      POLYGON ((33.98921307224973 -118.2562720327559...\n",
+       "1      POLYGON ((34.08336856317362 -118.2904153141149...\n",
+       "2      POLYGON ((34.05603885709694 -118.2843683929007...\n",
+       "3      POLYGON ((34.04013885183707 -118.2924807961456...\n",
+       "4      POLYGON ((34.0180677314139 -118.3673661121153,...\n",
+       "5      POLYGON ((34.06195296554269 -118.3200851846698...\n",
+       "6      POLYGON ((34.00246828287711 -118.2434683015289...\n",
+       "7      POLYGON ((34.09261140746374 -118.2416423927089...\n",
+       "8      POLYGON ((34.05274961173777 -118.2505815697205...\n",
+       "9      POLYGON ((34.04860724411182 -118.2546521370389...\n",
+       "10     POLYGON ((34.05183676355413 -118.2748113211176...\n",
+       "11     POLYGON ((34.06126809888068 -118.2685798252865...\n",
+       "12     POLYGON ((34.04050653081861 -118.3034301008546...\n",
+       "13     POLYGON ((34.05939879690771 -118.3298989262979...\n",
+       "14     POLYGON ((34.04204016406991 -118.2446653099151...\n",
+       "15     POLYGON ((34.04668575230335 -118.1684360783245...\n",
+       "16     POLYGON ((34.00096779482989 -118.1788216028908...\n",
+       "17     POLYGON ((34.08242667533754 -118.4324592347327...\n",
+       "18     POLYGON ((34.05969404452908 -118.4216750915033...\n",
+       "19     POLYGON ((34.09558335242226 -118.2761004366312...\n",
+       "20     POLYGON ((34.16114034259425 -118.3078586308575...\n",
+       "21     POLYGON ((34.10675552945857 -118.3104189174081...\n",
+       "22     POLYGON ((34.10132561377189 -118.2008289839306...\n",
+       "23     POLYGON ((34.06431071216143 -118.1973272463167...\n",
+       "24     POLYGON ((34.04549719911019 -118.3918307209181...\n",
+       "25     POLYGON ((34.05940337337555 -118.3772420593159...\n",
+       "26     POLYGON ((34.08365126645248 -118.3612610839286...\n",
+       "27     POLYGON ((34.01775730971844 -118.2961014869433...\n",
+       "28     POLYGON ((34.09489488690467 -118.3092185463984...\n",
+       "29     POLYGON ((34.14675968426054 -118.2721032205023...\n",
+       "                             ...                        \n",
+       "328    POLYGON ((33.88722573994085 -118.3179607483422...\n",
+       "329    POLYGON ((33.89754278478959 -118.3730904530196...\n",
+       "330    POLYGON ((33.92910081754403 -118.3771990990972...\n",
+       "331    POLYGON ((33.98204066400744 -118.3717313116424...\n",
+       "332    POLYGON ((34.01891799006323 -117.7367553100847...\n",
+       "333    POLYGON ((34.04876711941767 -118.4230477336249...\n",
+       "334    POLYGON ((34.058849767468 -117.8723103259801, ...\n",
+       "335    POLYGON ((34.06209236461528 -118.293024802652,...\n",
+       "336    POLYGON ((34.06209274852368 -118.2942459338505...\n",
+       "337    POLYGON ((34.06180438825989 -118.291630353164,...\n",
+       "338    POLYGON ((34.06246148542032 -118.2855103604194...\n",
+       "339    POLYGON ((34.0622692171869 -118.2954677855966,...\n",
+       "340    POLYGON ((34.06201734068335 -118.3215386946081...\n",
+       "341    POLYGON ((34.062020795902 -118.3229923247748, ...\n",
+       "342    POLYGON ((34.0623439488886 -118.3244803950532,...\n",
+       "343    POLYGON ((34.06239710098112 -118.3277502347333...\n",
+       "344    POLYGON ((34.06225703107216 -118.3372599476051...\n",
+       "345    POLYGON ((34.06484633968367 -118.3370493646507...\n",
+       "346    POLYGON ((34.07788330572854 -118.1256325160443...\n",
+       "347    POLYGON ((34.085118731667 -118.0567505159917, ...\n",
+       "348    POLYGON ((34.08644732165937 -117.9165924471727...\n",
+       "349    POLYGON ((34.110924665513 -118.0045648109616, ...\n",
+       "350    POLYGON ((34.11235245768464 -117.7487474063636...\n",
+       "351    POLYGON ((34.12599895082953 -117.8161977673693...\n",
+       "352    POLYGON ((34.12704350127151 -117.8197200439678...\n",
+       "353    POLYGON ((34.1651228315527 -117.97307197141, 3...\n",
+       "354    POLYGON ((34.21144503492346 -118.239975872828,...\n",
+       "355    POLYGON ((34.06203762664958 -118.3129175469202...\n",
+       "356    POLYGON ((33.99497058465503 -118.191365007226,...\n",
+       "357    POLYGON ((33.97610819677552 -118.2826998447356...\n",
+       "Name: geometry, Length: 358, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "google_maps_locations"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
