Removed hawaii coord

--- a/Food_Deserts_Final2.ipynb
+++ b/Food_Deserts_Final2.ipynb
@@ -122,12 +122,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export\n",
-    "# df_test.to_csv('clean.csv', index=False)"
+    "df_test.to_csv('clean.csv', index=False)"
    ]
   },
   {
