Plot the available markets

--- a/Food_Deserts_Final2.ipynb
+++ b/Food_Deserts_Final2.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,13 +165,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bokeh.plotting import figure, show, output_file\n",
     "from bokeh.tile_providers import get_provider, Vendors\n",
-    "from bokeh.models import ColumnDataSource"
+    "from bokeh.models import ColumnDataSource\n",
+    "from bokeh.models import HoverTool, WheelZoomTool, PanTool, BoxZoomTool, ResetTool, TapTool, SaveTool\n",
+    "from bokeh.models import ColumnDataSource, Range1d, LabelSet, Label"
    ]
   },
   {
@@ -197,9 +199,7 @@
     "p.circle(x='lon', y='lat', source=source, alpha=0.1)\n",
     "\n",
     "# Display the map\n",
-    "show(p)\n",
-    "\n",
-    "# Need to clean-up longitiude and latitude that are not in Los Angeles"
+    "show(p)"
    ]
   },
   {
@@ -311,23 +311,419 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LOCATION ACCOUNT #</th>\n",
+       "      <th>BUSINESS NAME</th>\n",
+       "      <th>DBA NAME</th>\n",
+       "      <th>STREET ADDRESS</th>\n",
+       "      <th>CITY</th>\n",
+       "      <th>ZIP CODE</th>\n",
+       "      <th>LOCATION DESCRIPTION</th>\n",
+       "      <th>MAILING ADDRESS</th>\n",
+       "      <th>MAILING CITY</th>\n",
+       "      <th>MAILING ZIP CODE</th>\n",
+       "      <th>NAICS</th>\n",
+       "      <th>PRIMARY NAICS DESCRIPTION</th>\n",
+       "      <th>COUNCIL DISTRICT</th>\n",
+       "      <th>LOCATION START DATE</th>\n",
+       "      <th>LOCATION END DATE</th>\n",
+       "      <th>LOCATION</th>\n",
+       "      <th>LATITUDE</th>\n",
+       "      <th>LONGITUDE</th>\n",
+       "      <th>in_circle</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2148</th>\n",
+       "      <td>0002583451-0001-3</td>\n",
+       "      <td>LAING SING HUANG / KARIE KHENG ING</td>\n",
+       "      <td>SILVER MOON MARKET</td>\n",
+       "      <td>2501 E 4TH STREET</td>\n",
+       "      <td>LOS ANGELES</td>\n",
+       "      <td>90033-4418</td>\n",
+       "      <td>2501 4TH 90033-4418</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>424400.0</td>\n",
+       "      <td>Grocery &amp; related products</td>\n",
+       "      <td>14</td>\n",
+       "      <td>10/24/2011</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(34.0401, -118.2106)</td>\n",
+       "      <td>34.0401</td>\n",
+       "      <td>-118.2106</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128700</th>\n",
+       "      <td>0002087138-0003-1</td>\n",
+       "      <td>NORTHGATE GONZALEZ LLC</td>\n",
+       "      <td>NORTHGATE MARKET # 37</td>\n",
+       "      <td>425 S SOTO STREET</td>\n",
+       "      <td>LOS ANGELES</td>\n",
+       "      <td>90033-4315</td>\n",
+       "      <td>425 SOTO 90033-4315</td>\n",
+       "      <td>1201 N MAGNOLIA AVENUE</td>\n",
+       "      <td>ANAHEIM</td>\n",
+       "      <td>92801-2609</td>\n",
+       "      <td>445100.0</td>\n",
+       "      <td>Grocery stores (including supermarkets &amp; conve...</td>\n",
+       "      <td>14</td>\n",
+       "      <td>09/18/2012</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(34.0401, -118.212)</td>\n",
+       "      <td>34.0401</td>\n",
+       "      <td>-118.2120</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142971</th>\n",
+       "      <td>0002456504-0001-4</td>\n",
+       "      <td>TORREZ ENTERPRISE INC</td>\n",
+       "      <td>MI BARRIO MARKET</td>\n",
+       "      <td>2432 E 1ST STREET</td>\n",
+       "      <td>LOS ANGELES</td>\n",
+       "      <td>90033-3502</td>\n",
+       "      <td>2432 1ST 90033-3502</td>\n",
+       "      <td>POST OFFICE BOX #30</td>\n",
+       "      <td>WHITTIER</td>\n",
+       "      <td>90608-0030</td>\n",
+       "      <td>445100.0</td>\n",
+       "      <td>Grocery stores (including supermarkets &amp; conve...</td>\n",
+       "      <td>14</td>\n",
+       "      <td>08/04/2009</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(34.0432, -118.2087)</td>\n",
+       "      <td>34.0432</td>\n",
+       "      <td>-118.2087</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239466</th>\n",
+       "      <td>0002884462-0001-5</td>\n",
+       "      <td>WILFRIDO ROMERO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2615 E 2ND STREET   APARTMENT #3</td>\n",
+       "      <td>LOS ANGELES</td>\n",
+       "      <td>90033-4139</td>\n",
+       "      <td>2615 2ND 90033-4139</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>445230.0</td>\n",
+       "      <td>Fruit &amp; vegetable markets</td>\n",
+       "      <td>14</td>\n",
+       "      <td>01/10/2015</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(34.041, -118.2077)</td>\n",
+       "      <td>34.0410</td>\n",
+       "      <td>-118.2077</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>331885</th>\n",
+       "      <td>0000032242-0004-7</td>\n",
+       "      <td>SMART &amp; FINAL STORES LLC</td>\n",
+       "      <td>SMART/FINAL #345 | SMART/FINAL IRIS CO DIV #345</td>\n",
+       "      <td>2308 E 4TH STREET</td>\n",
+       "      <td>LOS ANGELES</td>\n",
+       "      <td>90033-4306</td>\n",
+       "      <td>2308 4TH 90033-4306</td>\n",
+       "      <td>POST OFFICE BOX #512377</td>\n",
+       "      <td>LOS ANGELES</td>\n",
+       "      <td>90051-0377</td>\n",
+       "      <td>445100.0</td>\n",
+       "      <td>Grocery stores (including supermarkets &amp; conve...</td>\n",
+       "      <td>14</td>\n",
+       "      <td>01/01/1953</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(34.0411, -118.2129)</td>\n",
+       "      <td>34.0411</td>\n",
+       "      <td>-118.2129</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(5, 19)"
+       "       LOCATION ACCOUNT #                       BUSINESS NAME  \\\n",
+       "2148    0002583451-0001-3  LAING SING HUANG / KARIE KHENG ING   \n",
+       "128700  0002087138-0003-1              NORTHGATE GONZALEZ LLC   \n",
+       "142971  0002456504-0001-4               TORREZ ENTERPRISE INC   \n",
+       "239466  0002884462-0001-5                     WILFRIDO ROMERO   \n",
+       "331885  0000032242-0004-7            SMART & FINAL STORES LLC   \n",
+       "\n",
+       "                                               DBA NAME  \\\n",
+       "2148                                 SILVER MOON MARKET   \n",
+       "128700                            NORTHGATE MARKET # 37   \n",
+       "142971                                 MI BARRIO MARKET   \n",
+       "239466                                              NaN   \n",
+       "331885  SMART/FINAL #345 | SMART/FINAL IRIS CO DIV #345   \n",
+       "\n",
+       "                          STREET ADDRESS         CITY    ZIP CODE  \\\n",
+       "2148                   2501 E 4TH STREET  LOS ANGELES  90033-4418   \n",
+       "128700                 425 S SOTO STREET  LOS ANGELES  90033-4315   \n",
+       "142971                 2432 E 1ST STREET  LOS ANGELES  90033-3502   \n",
+       "239466  2615 E 2ND STREET   APARTMENT #3  LOS ANGELES  90033-4139   \n",
+       "331885                 2308 E 4TH STREET  LOS ANGELES  90033-4306   \n",
+       "\n",
+       "       LOCATION DESCRIPTION          MAILING ADDRESS MAILING CITY  \\\n",
+       "2148    2501 4TH 90033-4418                      NaN          NaN   \n",
+       "128700  425 SOTO 90033-4315   1201 N MAGNOLIA AVENUE      ANAHEIM   \n",
+       "142971  2432 1ST 90033-3502      POST OFFICE BOX #30     WHITTIER   \n",
+       "239466  2615 2ND 90033-4139                      NaN          NaN   \n",
+       "331885  2308 4TH 90033-4306  POST OFFICE BOX #512377  LOS ANGELES   \n",
+       "\n",
+       "       MAILING ZIP CODE     NAICS  \\\n",
+       "2148                NaN  424400.0   \n",
+       "128700       92801-2609  445100.0   \n",
+       "142971       90608-0030  445100.0   \n",
+       "239466              NaN  445230.0   \n",
+       "331885       90051-0377  445100.0   \n",
+       "\n",
+       "                                PRIMARY NAICS DESCRIPTION  COUNCIL DISTRICT  \\\n",
+       "2148                           Grocery & related products                14   \n",
+       "128700  Grocery stores (including supermarkets & conve...                14   \n",
+       "142971  Grocery stores (including supermarkets & conve...                14   \n",
+       "239466                          Fruit & vegetable markets                14   \n",
+       "331885  Grocery stores (including supermarkets & conve...                14   \n",
+       "\n",
+       "       LOCATION START DATE  LOCATION END DATE              LOCATION  LATITUDE  \\\n",
+       "2148            10/24/2011                NaN  (34.0401, -118.2106)   34.0401   \n",
+       "128700          09/18/2012                NaN   (34.0401, -118.212)   34.0401   \n",
+       "142971          08/04/2009                NaN  (34.0432, -118.2087)   34.0432   \n",
+       "239466          01/10/2015                NaN   (34.041, -118.2077)   34.0410   \n",
+       "331885          01/01/1953                NaN  (34.0411, -118.2129)   34.0411   \n",
+       "\n",
+       "        LONGITUDE  in_circle  \n",
+       "2148    -118.2106       True  \n",
+       "128700  -118.2120       True  \n",
+       "142971  -118.2087       True  \n",
+       "239466  -118.2077       True  \n",
+       "331885  -118.2129       True  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_groceries_within_circle(df_test, circle).shape"
+    "available_markets = get_groceries_within_circle(df_test, circle)\n",
+    "available_markets"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plot the avaialble stores if there's any"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyproj\n",
+    "def transform_df(df):\n",
+    "    # Dataframe from get_groceries_within_circle\n",
+    "    project_projection = pyproj.Proj(\"+init=EPSG:3857\") # Output map projections\n",
+    "    google_projection = pyproj.Proj(\"+init=EPSG:4326\") # Input map projections\n",
+    "\n",
+    "    # Save Coordinates to a list\n",
+    "    longitude = df['LONGITUDE'].values\n",
+    "    latitude = df['LATITUDE'].values\n",
+    "\n",
+    "    # Output mercator map projections where x=longitude and y=latitude\n",
+    "    x, y = pyproj.transform(google_projection, project_projection, longitude, latitude)\n",
+    "    return x,y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transform_input(input_x, input_y):\n",
+    "    #input_x = latitude value & input_y = longitude\n",
+    "    project_projection = pyproj.Proj(\"+init=EPSG:3857\") # Output map projections\n",
+    "    google_projection = pyproj.Proj(\"+init=EPSG:4326\") # Input map projections\n",
+    "\n",
+    "    # Save Coordinates to a list\n",
+    "    longitude = input_y\n",
+    "    latitude = input_x\n",
+    "\n",
+    "    # Output mercator map projections where x=longitude and y=latitude\n",
+    "    x, y = pyproj.transform(google_projection, project_projection, longitude, latitude)\n",
+    "    return x, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save list of latitude and longitude values\n",
+    "df_x, df_y = transform_df(available_markets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-13159143.798367346, 4034187.7481705165)"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Transform the input location to the correct coordinates\n",
+    "input_x, input_y =transform_input(34.0401, -118.2106)\n",
+    "input_x, input_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to plot the list of stores returned from get_groceries_within_circle\n",
+    "def plot_location(df_x, df_y, input_x, input_y):\n",
+    "    # HTML file\n",
+    "    output_file('market_location.html')\n",
+    "    # Name of tile used for plotting\n",
+    "    tile = get_provider(Vendors.STAMEN_TERRAIN)\n",
+    "\n",
+    "    # Instantiate the figure\n",
+    "    p = figure(plot_width=1000, plot_height=1000, x_axis_type = \"mercator\", y_axis_type = \"mercator\")\n",
+    "\n",
+    "    # Define the data to a dictionary\n",
+    "    source = ColumnDataSource(data = dict(lat=df_y,lon=df_x))\n",
+    "    \n",
+    "    # Add the tile/map\n",
+    "    p.add_tile(tile)\n",
+    "    \n",
+    "    # Plot it to the tile\n",
+    "    p.circle(x='lon', y='lat', source=source, size=15)\n",
+    "\n",
+    "    # Plot the center\n",
+    "    p.circle(x=input_x, y=input_y, size=15, color='red')\n",
+    "    \n",
+    "    # Display the map\n",
+    "    return show(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Returns html file of a bokeh plot\n",
+    "plot_location(df_x, df_y, input_x, input_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TEST PLOTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to plot the list of stores returned from get_groceries_within_circle\n",
+    "def plot_test(df, df_x, df_y, input_x, input_y):\n",
+    "    # HTML file\n",
+    "    output_file('market_location.html')\n",
+    "    # Name of tile used for plotting\n",
+    "    tile = get_provider(Vendors.STAMEN_TERRAIN)\n",
+    "\n",
+    "    # Instantiate the figure\n",
+    "    p = figure(plot_width=1000, plot_height=1000, x_axis_type = \"mercator\", y_axis_type = \"mercator\")\n",
+    "\n",
+    "    # Define the data to a dictionary\n",
+    "    source = ColumnDataSource(data = dict(lat=df_y,lon=df_x, business=df['BUSINESS NAME']))\n",
+    "    \n",
+    "    p.circle(x='lat', y='lon', size=8, source=source)\n",
+    "    labels = LabelSet(x='lat', y='lon', text='business',\n",
+    "                      level='glyph', x_offset=5, y_offset=5,\n",
+    "                      source=source, render_mode='canvas')\n",
+    "\n",
+    "    p.add_layout(labels)\n",
+    "    \n",
+    "    # Add the tile/map\n",
+    "    p.add_tile(tile)\n",
+    "\n",
+    "    \n",
+    "    # Display the map\n",
+    "    return show(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_test(available_markets, df_x, df_y, input_x, input_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
