Upload - test plots
Plots will give an error if there's no dataframe

--- a/Food_Deserts_Final2.ipynb
+++ b/Food_Deserts_Final2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "# Export\n",
-    "df_test.to_csv('clean.csv', index=False)"
+    "#df_test.to_csv('clean.csv', index=False)"
    ]
   },
   {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,16 +302,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
-    "circle = make_circle(34.0401, -118.2106, 0.25)"
+    "inputs = 34.0401, -118.2106, 0.25"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "circle = make_circle(input[0], input[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -357,186 +373,23 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2148</th>\n",
-       "      <td>0002583451-0001-3</td>\n",
-       "      <td>LAING SING HUANG / KARIE KHENG ING</td>\n",
-       "      <td>SILVER MOON MARKET</td>\n",
-       "      <td>2501 E 4TH STREET</td>\n",
-       "      <td>LOS ANGELES</td>\n",
-       "      <td>90033-4418</td>\n",
-       "      <td>2501 4TH 90033-4418</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>424400.0</td>\n",
-       "      <td>Grocery &amp; related products</td>\n",
-       "      <td>14</td>\n",
-       "      <td>10/24/2011</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>(34.0401, -118.2106)</td>\n",
-       "      <td>34.0401</td>\n",
-       "      <td>-118.2106</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>128700</th>\n",
-       "      <td>0002087138-0003-1</td>\n",
-       "      <td>NORTHGATE GONZALEZ LLC</td>\n",
-       "      <td>NORTHGATE MARKET # 37</td>\n",
-       "      <td>425 S SOTO STREET</td>\n",
-       "      <td>LOS ANGELES</td>\n",
-       "      <td>90033-4315</td>\n",
-       "      <td>425 SOTO 90033-4315</td>\n",
-       "      <td>1201 N MAGNOLIA AVENUE</td>\n",
-       "      <td>ANAHEIM</td>\n",
-       "      <td>92801-2609</td>\n",
-       "      <td>445100.0</td>\n",
-       "      <td>Grocery stores (including supermarkets &amp; conve...</td>\n",
-       "      <td>14</td>\n",
-       "      <td>09/18/2012</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>(34.0401, -118.212)</td>\n",
-       "      <td>34.0401</td>\n",
-       "      <td>-118.2120</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>142971</th>\n",
-       "      <td>0002456504-0001-4</td>\n",
-       "      <td>TORREZ ENTERPRISE INC</td>\n",
-       "      <td>MI BARRIO MARKET</td>\n",
-       "      <td>2432 E 1ST STREET</td>\n",
-       "      <td>LOS ANGELES</td>\n",
-       "      <td>90033-3502</td>\n",
-       "      <td>2432 1ST 90033-3502</td>\n",
-       "      <td>POST OFFICE BOX #30</td>\n",
-       "      <td>WHITTIER</td>\n",
-       "      <td>90608-0030</td>\n",
-       "      <td>445100.0</td>\n",
-       "      <td>Grocery stores (including supermarkets &amp; conve...</td>\n",
-       "      <td>14</td>\n",
-       "      <td>08/04/2009</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>(34.0432, -118.2087)</td>\n",
-       "      <td>34.0432</td>\n",
-       "      <td>-118.2087</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>239466</th>\n",
-       "      <td>0002884462-0001-5</td>\n",
-       "      <td>WILFRIDO ROMERO</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2615 E 2ND STREET   APARTMENT #3</td>\n",
-       "      <td>LOS ANGELES</td>\n",
-       "      <td>90033-4139</td>\n",
-       "      <td>2615 2ND 90033-4139</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>445230.0</td>\n",
-       "      <td>Fruit &amp; vegetable markets</td>\n",
-       "      <td>14</td>\n",
-       "      <td>01/10/2015</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>(34.041, -118.2077)</td>\n",
-       "      <td>34.0410</td>\n",
-       "      <td>-118.2077</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>331885</th>\n",
-       "      <td>0000032242-0004-7</td>\n",
-       "      <td>SMART &amp; FINAL STORES LLC</td>\n",
-       "      <td>SMART/FINAL #345 | SMART/FINAL IRIS CO DIV #345</td>\n",
-       "      <td>2308 E 4TH STREET</td>\n",
-       "      <td>LOS ANGELES</td>\n",
-       "      <td>90033-4306</td>\n",
-       "      <td>2308 4TH 90033-4306</td>\n",
-       "      <td>POST OFFICE BOX #512377</td>\n",
-       "      <td>LOS ANGELES</td>\n",
-       "      <td>90051-0377</td>\n",
-       "      <td>445100.0</td>\n",
-       "      <td>Grocery stores (including supermarkets &amp; conve...</td>\n",
-       "      <td>14</td>\n",
-       "      <td>01/01/1953</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>(34.0411, -118.2129)</td>\n",
-       "      <td>34.0411</td>\n",
-       "      <td>-118.2129</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       LOCATION ACCOUNT #                       BUSINESS NAME  \\\n",
-       "2148    0002583451-0001-3  LAING SING HUANG / KARIE KHENG ING   \n",
-       "128700  0002087138-0003-1              NORTHGATE GONZALEZ LLC   \n",
-       "142971  0002456504-0001-4               TORREZ ENTERPRISE INC   \n",
-       "239466  0002884462-0001-5                     WILFRIDO ROMERO   \n",
-       "331885  0000032242-0004-7            SMART & FINAL STORES LLC   \n",
-       "\n",
-       "                                               DBA NAME  \\\n",
-       "2148                                 SILVER MOON MARKET   \n",
-       "128700                            NORTHGATE MARKET # 37   \n",
-       "142971                                 MI BARRIO MARKET   \n",
-       "239466                                              NaN   \n",
-       "331885  SMART/FINAL #345 | SMART/FINAL IRIS CO DIV #345   \n",
-       "\n",
-       "                          STREET ADDRESS         CITY    ZIP CODE  \\\n",
-       "2148                   2501 E 4TH STREET  LOS ANGELES  90033-4418   \n",
-       "128700                 425 S SOTO STREET  LOS ANGELES  90033-4315   \n",
-       "142971                 2432 E 1ST STREET  LOS ANGELES  90033-3502   \n",
-       "239466  2615 E 2ND STREET   APARTMENT #3  LOS ANGELES  90033-4139   \n",
-       "331885                 2308 E 4TH STREET  LOS ANGELES  90033-4306   \n",
-       "\n",
-       "       LOCATION DESCRIPTION          MAILING ADDRESS MAILING CITY  \\\n",
-       "2148    2501 4TH 90033-4418                      NaN          NaN   \n",
-       "128700  425 SOTO 90033-4315   1201 N MAGNOLIA AVENUE      ANAHEIM   \n",
-       "142971  2432 1ST 90033-3502      POST OFFICE BOX #30     WHITTIER   \n",
-       "239466  2615 2ND 90033-4139                      NaN          NaN   \n",
-       "331885  2308 4TH 90033-4306  POST OFFICE BOX #512377  LOS ANGELES   \n",
-       "\n",
-       "       MAILING ZIP CODE     NAICS  \\\n",
-       "2148                NaN  424400.0   \n",
-       "128700       92801-2609  445100.0   \n",
-       "142971       90608-0030  445100.0   \n",
-       "239466              NaN  445230.0   \n",
-       "331885       90051-0377  445100.0   \n",
-       "\n",
-       "                                PRIMARY NAICS DESCRIPTION  COUNCIL DISTRICT  \\\n",
-       "2148                           Grocery & related products                14   \n",
-       "128700  Grocery stores (including supermarkets & conve...                14   \n",
-       "142971  Grocery stores (including supermarkets & conve...                14   \n",
-       "239466                          Fruit & vegetable markets                14   \n",
-       "331885  Grocery stores (including supermarkets & conve...                14   \n",
-       "\n",
-       "       LOCATION START DATE  LOCATION END DATE              LOCATION  LATITUDE  \\\n",
-       "2148            10/24/2011                NaN  (34.0401, -118.2106)   34.0401   \n",
-       "128700          09/18/2012                NaN   (34.0401, -118.212)   34.0401   \n",
-       "142971          08/04/2009                NaN  (34.0432, -118.2087)   34.0432   \n",
-       "239466          01/10/2015                NaN   (34.041, -118.2077)   34.0410   \n",
-       "331885          01/01/1953                NaN  (34.0411, -118.2129)   34.0411   \n",
-       "\n",
-       "        LONGITUDE  in_circle  \n",
-       "2148    -118.2106       True  \n",
-       "128700  -118.2120       True  \n",
-       "142971  -118.2087       True  \n",
-       "239466  -118.2077       True  \n",
-       "331885  -118.2129       True  "
+       "Empty DataFrame\n",
+       "Columns: [LOCATION ACCOUNT #, BUSINESS NAME, DBA NAME, STREET ADDRESS, CITY, ZIP CODE, LOCATION DESCRIPTION, MAILING ADDRESS, MAILING CITY, MAILING ZIP CODE, NAICS, PRIMARY NAICS DESCRIPTION, COUNCIL DISTRICT, LOCATION START DATE, LOCATION END DATE, LOCATION, LATITUDE, LONGITUDE, in_circle]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "available_markets = get_groceries_within_circle(df_test, circle)\n",
-    "available_markets"
+    "get_groceries_within_circle(df_test, circle)"
    ]
   },
   {
@@ -548,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,39 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save list of latitude and longitude values\n",
-    "df_x, df_y = transform_df(available_markets)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(-13159143.798367346, 4034187.7481705165)"
-      ]
-     },
-     "execution_count": 183,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Transform the input location to the correct coordinates\n",
-    "input_x, input_y =transform_input(34.0401, -118.2106)\n",
-    "input_x, input_y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,70 +473,71 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Returns html file of a bokeh plot\n",
-    "plot_location(df_x, df_y, input_x, input_y)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TEST PLOTS"
+    "# Test plots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to plot the list of stores returned from get_groceries_within_circle\n",
-    "def plot_test(df, df_x, df_y, input_x, input_y):\n",
-    "    # HTML file\n",
-    "    output_file('market_location.html')\n",
-    "    # Name of tile used for plotting\n",
-    "    tile = get_provider(Vendors.STAMEN_TERRAIN)\n",
-    "\n",
-    "    # Instantiate the figure\n",
-    "    p = figure(plot_width=1000, plot_height=1000, x_axis_type = \"mercator\", y_axis_type = \"mercator\")\n",
-    "\n",
-    "    # Define the data to a dictionary\n",
-    "    source = ColumnDataSource(data = dict(lat=df_y,lon=df_x, business=df['BUSINESS NAME']))\n",
-    "    \n",
-    "    p.circle(x='lat', y='lon', size=8, source=source)\n",
-    "    labels = LabelSet(x='lat', y='lon', text='business',\n",
-    "                      level='glyph', x_offset=5, y_offset=5,\n",
-    "                      source=source, render_mode='canvas')\n",
-    "\n",
-    "    p.add_layout(labels)\n",
-    "    \n",
-    "    # Add the tile/map\n",
-    "    p.add_tile(tile)\n",
-    "\n",
-    "    \n",
-    "    # Display the map\n",
-    "    return show(p)"
+    "# Lat, long, and miles inputs\n",
+    "input = 34., -118.2550"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_test(available_markets, df_x, df_y, input_x, input_y)"
+    "# Make circle around input\n",
+    "circle = make_circle(input[0], input[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get Groceries \n",
+    "available_markets = get_groceries_within_circle(df_test, circle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transform the input location to the correct coordinates\n",
+    "input_x, input_y =transform_input(input[0], input[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save list of latitude and longitude values\n",
+    "# Will give an error if there's no dataframe\n",
+    "df_x, df_y = transform_df(available_markets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Returns html file of a bokeh plot - Red is the input location, Blue is the available markets\n",
+    "plot_location(df_x, df_y, input_x, input_y)"
    ]
   },
   {
